--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4"
